--- a/roles/blog/tasks/main.yml
+++ b/roles/blog/tasks/main.yml
@@ -1,3 +1,3 @@
-- include: blog.yml tags=blog
-- include: fathom.yml tags=blog
-- include: commento.yml tags=blog
+- include_tasks: blog.yml
+- include_tasks: fathom.yml
+- include_tasks: commento.yml
