--- a/roles/sslletsencrypt/tasks/main.yml
+++ b/roles/sslletsencrypt/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
-- include: ssl.yml tags=ssl
-- include: letsencrypt.yml tags=letsencrypt
-- include: ufw.yml tags=ufw
+- include_tasks: ssl.yml
+- include_tasks: letsencrypt.yml
+- include_tasks: ufw.yml
